# note

./: main.py  markdown_to_pdf_gui_plan_prompt.md
documents/: 名称未設定.rtf
figures/: numerical_table.tex
markdown_to_pdf_gui/: .gitignore  CHANGELOG.md  Makefile  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.py
markdown_to_pdf_gui/config/: default_config.json
markdown_to_pdf_gui/core/: __init__.py  config_manager.py  config_migrator.py  converter.py  converter_thread.py  emoji_converter.py  environment_checker.py  error_analyzer.py  error_handler.py  figure_generator.py  history_manager.py  image_processor.py  markdown_validator.py  pdf_validator.py  performance_monitor.py  script_parser.py  statistics_collector.py  template_manager.py
markdown_to_pdf_gui/docs/: API.md  TROUBLESHOOTING.md
markdown_to_pdf_gui/gui/: __init__.py  history_dialog.py  log_viewer.py  main_window.py  profile_dialog.py  settings_dialog.py
markdown_to_pdf_gui/templates/: default_template.tex
markdown_to_pdf_gui/tests/: __init__.py  conftest.py  test_config_manager.py  test_converter.py  test_emoji_converter.py  test_integration.py  test_markdown_validator.py  test_script_parser.py  test_template_manager.py
markdown_to_pdf_gui/utils/: __init__.py  cache_manager.py  logger.py  path_validator.py
mathematics/: math_probability_solution.md
mathematics/scripts/: math_probability_visualization.py
physics/adPhysics/: Untitled  fix_all_labels.py  fix_labels.py  generate_pdf.sh  plots.py  (+5 more)
programming/: maxwell.aux  maxwell.tex
sort/: PV=nRT.py  bogo.py
(+225 files in other folders)
